css/ad-specs.css
form.custom{
    margin-top:25px;
}

.top-bar-section ul li > a{
    font-weight: lighter;
}

.chevron{
    position:absolute;
    top:12px;
    padding-left:150px;
}

.table-header{
    background: #26aec2;
}

.sub-nav{
    font-size:10pt;
    color:#26aec2;
}
.sub-nav a{
    padding:10px;
}

h1{
    font-weight: lighter;
}

h3{
    font-weight: lighter;
}

.column-header{
    color:#eee;
    font-size:10pt;
    padding:6px;
    font-weight: lighter;
}

h4{
    margin-left:0;
    padding-left:0;
    font-size: 100%;
}

.ad-data-row{
    font-size:10pt;
    color:#b3b3b3;
    padding-top:5px;
}

.cell-label{
    padding:6px;
}
.cell-data{
    padding:6px;
    margin-bottom:18px;
    color:#666666;
    line-height: 150%;
}

.ad-row-title{
    color:#000000;
    font-weight: bold !important;
}

.guideline-section p{
    color:#999;
    font-size:9pt;
}

.spacer-line{
    border-top: 1px dashed tan; 
    height: 1px;
    width: 98%;
    margin-left: 1%;

}

.row-spacer{
    width:100%;
    background: none;
    text-align: right;
}


.effectiveness-list{
    color: #000;
}
ul.effectiveness-list{
    list-style-type: disc;
    padding-left: 40px;
    color: #000;
    padding-top: 10px;

}

ul.guideline-list{
    margin-left:18px;
}

ul.guideline-list li{
    color:#999;
    font-size:9pt;
}

